// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Addons component tests matches snapshot 1`] = `
<withRouter(EditCamper)
  canSave={false}
  hasFooter={true}
  isLoading={true}
  leavePageMethod={[MockFunction]}
  onSave={[MockFunction]}
>
  <div
    className="container"
  >
    <ForwardRef(InternalForm)
      layout="vertical"
    >
      <Row>
        <Col
          lg={16}
        >
          <h1
            className="text-headline mb-8"
          >
            <Memo(FormattedMessage)
              id="shared.addons"
            />
          </h1>
          <p
            className="mb-24 text-color-gray"
          >
            <Memo(FormattedMessage)
              id="dashboard.editCamper.addons.description"
            />
          </p>
          <div
            className="mb-24 text-subheader font-700"
          >
            <Memo(FormattedMessage)
              id="dashboard.editCamper.addons.suggested.title"
            />
          </div>
        </Col>
        <Col
          span={24}
        >
          <Row>
            <SuggestedAddons
              items={Array []}
            />
          </Row>
        </Col>
        <Divider />
        <Col
          span={24}
        >
          <CustomAddons
            items={Array []}
            onAdd={[MockFunction]}
            onRemove={[MockFunction]}
          />
        </Col>
      </Row>
    </ForwardRef(InternalForm)>
  </div>
</withRouter(EditCamper)>
`;

exports[`Addons component tests matches snapshot when camper does not exist 1`] = `
<withRouter(EditCamper)
  canSave={false}
  hasFooter={true}
  isLoading={true}
  leavePageMethod={[MockFunction]}
  onSave={[MockFunction]}
>
  <div
    className="container"
  >
    <ForwardRef(InternalForm)
      layout="vertical"
    >
      <Row>
        <Col
          lg={16}
        >
          <h1
            className="text-headline mb-8"
          >
            <Memo(FormattedMessage)
              id="shared.addons"
            />
          </h1>
          <p
            className="mb-24 text-color-gray"
          >
            <Memo(FormattedMessage)
              id="dashboard.editCamper.addons.description"
            />
          </p>
          <div
            className="mb-24 text-subheader font-700"
          >
            <Memo(FormattedMessage)
              id="dashboard.editCamper.addons.suggested.title"
            />
          </div>
        </Col>
        <Skeleton
          active={true}
          avatar={false}
          paragraph={true}
          title={true}
        />
      </Row>
    </ForwardRef(InternalForm)>
  </div>
</withRouter(EditCamper)>
`;
